Skeleton individual & bulk ack
- Button element to work with Lightning pages
- DonationAcknowledgementService: Accept Flow input
  - Create @InvocableMethod entry point & wrappers
  - Factor out common Opportunity lookup code
- Example Acknowledgement flow
- Button for bulk ack in list view
- Action for individual Opportunity ack

--- a/force-app/main/default/classes/DonationAcknowledgementService.cls
+++ b/force-app/main/default/classes/DonationAcknowledgementService.cls
@@ -1,20 +1,70 @@
 public with sharing class DonationAcknowledgementService {
+    // Wrapper class for Invocable input
+    public class OpportunityIdWrapper {
+        @InvocableVariable(required=true)
+        public List<Id> opportunityIds;
+    }
+
+    // Wrapper class for Invocable output
+    public class AckResultWrapper {
+        @InvocableVariable
+        public String result;
+    }
+
     /**
-     * Sends acknowledgement emails for eligible Opportunities and creates EmailMessage records.
-     * @param idList List of Opportunity record IDs to process
-     * @return Status message indicating how many Opportunities were processed
+     * Shared logic to process Opportunities by Ids
      */
-    
-    @AuraEnabled
-    public static String sendAcknowledgements(List<Id> idList) {
+    private static List<Opportunity> getOpportunitiesByIds(List<Id> idList) {
         if (idList == null || idList.isEmpty()) {
-            return 'No Opportunity IDs provided.';
+            return new List<Opportunity>();
         }
-        List<Opportunity> opps = [
+        return [
             SELECT Id, Name, Amount, StageName, CloseDate, AccountId, ContactId
             FROM Opportunity
             WHERE Id IN :idList
         ];
+    }
+
+    /**
+     * Invocable method for Flows and list view buttons
+     * @param inputList List of OpportunityIdWrapper
+     * @return List of AckResultWrapper with status messages
+     */
+    @InvocableMethod(label='Send Donation Acknowledgements' description='Sends acknowledgement emails for selected Opportunities and creates EmailMessage records.')
+    public static List<AckResultWrapper> sendAcknowledgementsInvocable(List<OpportunityIdWrapper> inputList) {
+        List<Id> idList = new List<Id>();
+        for (OpportunityIdWrapper w : inputList) {
+            if (w != null && w.opportunityIds != null) {
+                for (Id idVal : w.opportunityIds) {
+                    if (idVal != null) {
+                        idList.add(idVal);
+                    }
+                }
+            }
+        }
+        List<Opportunity> opps = getOpportunitiesByIds(idList);
+        List<AckResultWrapper> results = new List<AckResultWrapper>();
+        AckResultWrapper res = new AckResultWrapper();
+        if (opps.isEmpty()) {
+            res.result = 'No Opportunity IDs provided.';
+        } else {
+            // TODO: Process opps (send emails, create EmailMessage records)
+            res.result = 'sendAcknowledgements called with ' + opps.size() + ' Opportunities.';
+        }
+        System.debug(LoggingLevel.INFO, res.result);
+        results.add(res);
+        return results;
+    }
+
+    /**
+     * AuraEnabled method for LWC/Aura use
+     */
+    @AuraEnabled
+    public static String sendAcknowledgements(List<Id> idList) {
+        List<Opportunity> opps = getOpportunitiesByIds(idList);
+        if (opps.isEmpty()) {
+            return 'No Opportunity IDs provided.';
+        }
         // TODO: Process opps (send emails, create EmailMessage records)
         return 'sendAcknowledgements called with ' + opps.size() + ' Opportunities.';
     }
