Call out to sendAcknowledgements
from InvocableMethod

--- a/force-app/main/default/classes/DonationAcknowledgementService.cls
+++ b/force-app/main/default/classes/DonationAcknowledgementService.cls
@@ -1,67 +1,73 @@
 public with sharing class DonationAcknowledgementService {
-    // Wrapper class for Invocable input
-    public class OpportunityIdWrapper {
-        @InvocableVariable(required=true)
-        public List<Id> opportunityIds;
-    }
+  // Wrapper class for Invocable input
+  public class OpportunityIdWrapper {
+    @InvocableVariable(required=true)
+    public List<Id> opportunityIds;
+  }
 
-    // Wrapper class for Invocable output
-    public class AckResultWrapper {
-        @InvocableVariable
-        public String result;
-    }
+  // Wrapper class for Invocable output
+  public class AckResultWrapper {
+    @InvocableVariable
+    public String result;
+  }
 
-    /**
-     * Shared logic to process Opportunities by Ids
-     */
-    private static List<Opportunity> getOpportunitiesByIds(List<Id> idList) {
-        if (idList == null || idList.isEmpty()) {
-            return new List<Opportunity>();
-        }
-        return [
-            SELECT Id, Name, Amount, StageName, CloseDate, AccountId, ContactId
-            FROM Opportunity
-            WHERE Id IN :idList
-        ];
+  /**
+   * Shared logic to process Opportunities by Ids
+   */
+  private static List<Opportunity> getOpportunitiesByIds(List<Id> idList) {
+    if (idList == null || idList.isEmpty()) {
+      return new List<Opportunity>();
     }
+    return [
+      SELECT Id, Name, Amount, StageName, CloseDate, AccountId, ContactId
+      FROM Opportunity
+      WHERE Id IN :idList
+    ];
+  }
 
-    /**
-     * Invocable method for Flows and list view buttons
-     * @param inputList List of OpportunityIdWrapper
-     * @return List of AckResultWrapper with status messages
-     */
-    @InvocableMethod(label='Send Donation Acknowledgements' description='Sends acknowledgement emails for selected Opportunities and creates EmailMessage records.')
-    public static List<AckResultWrapper> sendAcknowledgementsInvocable(List<OpportunityIdWrapper> inputList) {
-        Set<Id> idSet = new Set<Id>();
-        for (OpportunityIdWrapper w : inputList) {
-            if (w != null && w.opportunityIds != null) {
-                idSet.addAll(w.opportunityIds);
-            }
-        }
-        List<Opportunity> opps = getOpportunitiesByIds(new List<Id>(idSet));
-        List<AckResultWrapper> results = new List<AckResultWrapper>();
-        AckResultWrapper res = new AckResultWrapper();
-        if (opps.isEmpty()) {
-            res.result = 'No Opportunity IDs provided.';
-        } else {
-            // TODO: Process opps (send emails, create EmailMessage records)
-            res.result = 'sendAcknowledgements called with ' + opps.size() + ' Opportunities.';
-        }
-        System.debug(LoggingLevel.INFO, res.result);
-        results.add(res);
-        return results;
+  /**
+   * Invocable method for Flows and list view buttons
+   * @param inputList List of OpportunityIdWrapper
+   * @return List of AckResultWrapper with status messages
+   */
+  @InvocableMethod(
+    label='Send Donation Acknowledgements'
+    description='Sends acknowledgement emails for selected Opportunities and creates EmailMessage records.'
+  )
+  public static List<AckResultWrapper> sendAcknowledgementsInvocable(
+    List<OpportunityIdWrapper> inputList
+  ) {
+    Set<Id> idSet = new Set<Id>();
+    for (OpportunityIdWrapper w : inputList) {
+      if (w != null && w.opportunityIds != null) {
+        idSet.addAll(w.opportunityIds);
+      }
     }
+    // Call the AuraEnabled method to avoid code duplication
+    String resultMsg = sendAcknowledgements(new List<Id>(idSet));
 
-    /**
-     * AuraEnabled method for LWC/Aura use
-     */
-    @AuraEnabled
-    public static String sendAcknowledgements(List<Id> idList) {
-        List<Opportunity> opps = getOpportunitiesByIds(idList);
-        if (opps.isEmpty()) {
-            return 'No Opportunity IDs provided.';
-        }
-        // TODO: Process opps (send emails, create EmailMessage records)
-        return 'sendAcknowledgements called with ' + opps.size() + ' Opportunities.';
+    List<AckResultWrapper> results = new List<AckResultWrapper>();
+    AckResultWrapper res = new AckResultWrapper();
+    res.result = resultMsg;
+
+    System.debug(LoggingLevel.INFO, res.result);
+
+    results.add(res);
+    return results;
+  }
+
+  /**
+   * AuraEnabled method for LWC/Aura use
+   */
+  @AuraEnabled
+  public static String sendAcknowledgements(List<Id> idList) {
+    List<Opportunity> opps = getOpportunitiesByIds(idList);
+    if (opps.isEmpty()) {
+      return 'No Opportunity IDs provided.';
     }
+    // TODO: Process opps (send emails, create EmailMessage records)
+    return 'sendAcknowledgements called with ' +
+      opps.size() +
+      ' Opportunities.';
+  }
 }
