rename static template to 'StaticDonationAcknowledgement'

--- a/force-app/main/default/classes/DonationAcknowledgementService.cls
+++ b/force-app/main/default/classes/DonationAcknowledgementService.cls
@@ -13,7 +13,7 @@ public with sharing class DonationAcknowledgementService {
 
   // Instance variables for template devname and folder, default to current values
   @TestVisible
-  static String donationAckTemplateDevName = 'TempDonationAck';
+  static String donationAckTemplateDevName = 'StaticDonationAcknowledgement';
   @TestVisible
   static String donationAckTemplateFolder = 'EnhancedDonationAcknowledgements';
 
