feat: add email delivery error handling to prevent data integrity issues
- Wrap Messaging.sendEmail() calls in try-catch blocks
- Only update acknowledgment dates when emails send successfully
- Throw AuraHandledException with clear error messages on failure
- Add comprehensive test for email failure scenarios
- Update README to reflect enhanced error handling implementation

Fixes race condition where npsp__Acknowledgment_Date__c was set even
when email delivery failed, ensuring data integrity between email
status and acknowledgment tracking.

--- a/force-app/main/default/classes/DonationAcknowledgementService.cls
+++ b/force-app/main/default/classes/DonationAcknowledgementService.cls
@@ -177,8 +177,19 @@ public with sharing class DonationAcknowledgementService {
       }
     }
     if (!emails.isEmpty()) {
-      Messaging.sendEmail(emails);
-      updateAcknowledgementDates(oppsToUpdate);
+      try {
+        Messaging.sendEmail(emails);
+        updateAcknowledgementDates(oppsToUpdate);
+      } catch (Exception e) {
+        System.debug(
+          LoggingLevel.ERROR,
+          'Email sending failed: ' + e.getMessage()
+        );
+        // Don't update acknowledgment dates if sending failed
+        throw new AuraHandledException(
+          'Failed to send acknowledgement emails: ' + e.getMessage()
+        );
+      }
     }
     return sentCount;
   }
@@ -243,8 +254,19 @@ public with sharing class DonationAcknowledgementService {
       }
     }
     if (!emails.isEmpty()) {
-      Messaging.sendEmail(emails);
-      updateAcknowledgementDates(oppsToUpdate);
+      try {
+        Messaging.sendEmail(emails);
+        updateAcknowledgementDates(oppsToUpdate);
+      } catch (Exception e) {
+        System.debug(
+          LoggingLevel.ERROR,
+          'Email sending failed: ' + e.getMessage()
+        );
+        // Don't update acknowledgment dates if sending failed
+        throw new AuraHandledException(
+          'Failed to send acknowledgement emails: ' + e.getMessage()
+        );
+      }
     }
     return sentCount;
   }
